# ic

PhoenixAPI-main/PhoenixAPI-main/cpp/examples/InstantCombat/: Bot.cpp  CMakeLists.txt  INIReader.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  main.cpp  player.h  utils.cpp  utils.h
PhoenixAPI-main/PhoenixAPI-main/cpp/examples/InstantCombat/Debug/: vc143.idb
PhoenixAPI-main/PhoenixAPI-main/cpp/examples/InstantCombat/Debug/InstantCombat.tlog/: CL.command.1.tlog
PhoenixAPI-main/PhoenixAPI-main/cpp/examples/InstantCombat/utils.py/: utils.py.sln
PhoenixAPI-main/PhoenixAPI-main/cpp/examples/InstantCombat/utils.py/utils.py/: utils.py.pyproj
PhoenixAPI-main/PhoenixAPI-main/cpp/examples/InstantCombat/x64/Debug/: vc143.idb
PhoenixAPI-main/PhoenixAPI-main/cpp/examples/InstantCombat/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate
